--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
               </div>
             </div>
           </div>
+
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
         </div>
       </div>
     </div>
@@ -181,7 +189,7 @@
           <h4>Dreaming on</h4>
           <p>NEFFIX</p>
         </div>
-        <img src="./Icons/heart.png" alt="like song" />
+        <img src="./Icons/heart.png" alt="like song" class="like-a-song" />
       </div>
       <div class="song-control">
         <div class="song-control-upper">
