--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="logo-flex">
               <img src="./Icons/Search.png" alt="search-icon" />
-              <p>search</p>
+              <input type="text" placeholder="Search" id="Search-bar" />
             </div>
 
             <div class="logo-flex">
