--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <li>Daily mix 1</li>
               <li>DiscoverWeekly</li>
               <li>Malayalam</li>
-              <li>Dance/ElectronixMix</li>
+              <li>Dance</li>
               <li>EDM/Popular</li>
             </ul>
           </div>
