--- a/album.html
+++ b/album.html
@@ -13,57 +13,48 @@
       <!-- side-bar section -->
       <div class="side-bar">
         <div class="side-bar-content">
-          <!-- spotify logo -->
-          <div class="spotify-logo">
-            <img src="./Icons/Spotify logo.png" alt="Spotify lo" />
-          </div>
-          <!-- home-search-library -->
           <div class="nav-item nav-line-seperation">
-            <div class="logo-flex">
-              <img src="./Icons/Home.png" alt="" />
-              <p>Home</p>
+            <!-- spotify logo -->
+            <div class="spotify-logo">
+              <img src="./Icons/Spotify logo.png" alt="Spotify lo" />
             </div>
 
-            <div class="logo-flex">
-              <img src="./Icons/Search.png" alt="search-icon" />
-              <p>search</p>
-            </div>
+            <!-- home-search-library -->
+            <div class="home-section-album">
+              <div class="logo-flex">
+                <img src="./Icons/Home.png" alt="" />
+                <p>Home</p>
+              </div>
 
-            <div class="logo-flex">
-              <img src="./Icons/Your library.png" alt="Music library section" />
-              <p>Your Library</p>
+              <div class="logo-flex">
+                <img src="./Icons/Search.png" alt="search-icon" />
+                <p>search</p>
+              </div>
+
+              <div class="logo-flex">
+                <img
+                  src="./Icons/Your library.png"
+                  alt="Music library section" />
+                <p>Your Library</p>
+              </div>
+            </div>
+            <!-- playlist-section -->
+            <div class="nav-item nav-line-seperation playlist-section-album">
+              <p>Playlist</p>
+              <div class="logo-flex">
+                <img src="./Icons/plus.png" alt="add button" />
+                <p>Create Playlist</p>
+              </div>
+              <div class="logo-flex">
+                <img src="./Icons/purpleheart.png" alt="liked songs" />
+                <p>Liked Songs</p>
+              </div>
             </div>
           </div>
-          <!-- list-song-eisode -->
-          <div class="nav-item nav-line-seperation">
-            <div class="logo-flex">
-              <img src="./Icons/plus.png" alt="add button" />
-              <p>Create Playlist</p>
-            </div>
-            <div class="logo-flex">
-              <img src="./Icons/purpleheart.png" alt="liked songs" />
-              <p>Liked Songs</p>
-            </div>
-            <div class="logo-flex">
-              <img src="./Icons/hotspot.png" alt="podcast" />
-              <p>Episodes</p>
-            </div>
-          </div>
-          <!-- nav-list -->
-          <div class="side-list">
-            <ul class="nav-line-seperation">
-              <li>FAV</li>
-              <li>Daily mix 1</li>
-              <li>DiscoverWeekly</li>
-              <li>Malayalam</li>
-              <li>Dance/ElectronixMix</li>
-              <li>EDM/Popular</li>
-            </ul>
-          </div>
-          <!-- install-section -->
-          <div class="logo-flex">
-            <img src="./Icons/download.png" alt="" />
-            <p>Install App</p>
+          <!-- album-art -->
+
+          <div class="album-art">
+            <img src="./Icons/imgs/album art.png" alt="" />
           </div>
         </div>
       </div>
@@ -72,102 +63,7 @@
       <!-- main-content-area -->
 
       <div class="content-area">
-        <!-- profile-header area -->
-        <div class="profile-header">
-          <div class="main-arrow">
-            <img src="./Icons/backward.png" alt="backward" />
-            <img src="./Icons/forward.png" alt="forward" />
-          </div>
-          <div class="main-profile">
-            <img src="./Icons/imgs/profile.png" alt="profile picture" />
-            <p>Angel</p>
-            <i class="fa-solid fa-caret-down" style="color: #ffffff"></i>
-          </div>
-        </div>
-        <!-- playlist and artist area -->
-        <div class="playlist-artist-area">
-          <!-- playlist area -->
-          <h1>Good Morning</h1>
-          <div class="playlist-area">
-            <div class="playlist">
-              <img src="./Icons/imgs/Purple-big.png" alt="liked songs" />
-              <p>Liked Songs</p>
-            </div>
 
-            <div class="playlist">
-              <img src="./Icons/imgs/man.png" alt="playlist-1" />
-              <p>Playlist-1</p>
-            </div>
-
-            <div class="playlist">
-              <img src="./Icons/imgs/KDA.png" alt="playlist-2" />
-              <p>Playlist-2</p>
-            </div>
-
-            <div class="playlist">
-              <img src="./Icons/imgs/marshmellow.png" alt="playlist-3" />
-              <p>Playlist-3</p>
-            </div>
-          </div>
-
-          <!-- artist area -->
-          <div class="artist-area">
-            <div class="show-head">
-              <h3>Shows you might like</h3>
-              <p>see all</p>
-            </div>
-            <div class="shows-you-might-like">
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 21.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 22.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 23.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 21.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 21.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 21.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 21.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-
-              <div class="shows">
-                <img src="./Icons/imgs/Rectangle 21.png" alt="show-1" />
-                <h4>Weekly motivation</h4>
-                <h5>Ben lana scot</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
     <!-- --------------------------- -->
