--- a/album.html
+++ b/album.html
@@ -10,7 +10,7 @@
   <body>
     <div class="main-conatiner">
       <!-- ----------------------- -->
-      <!-- side-bar section -->
+      <!-- side-bar-ablbum  -->
       <div class="side-bar">
         <div class="side-bar-content">
           <div class="nav-item nav-line-seperation">
@@ -60,11 +60,246 @@
       </div>
 
       <!-- ------------------------- -->
-      <!-- main-content-area -->
+      <!-- main-content-album -->
+      <div class="main-album">
+        <!-- main album head -->
+        <div class="main-album-pop-right-now">
+          <div class="pop-img">
+            <img src="./Icons/imgs/pop-rn.png" alt="pop-img">
+          </div>
+          <div class="pop-content">
+            <p>Playlist</p>
+            <h1>POP RIGHT NOW</h1>
+            <P>Lorem ipsum dolor sit amet.</P>
+            <p><span>Spotify. </span> 860,656 likes. 100 songs</p>
+          </div>
+        </div>
+        <!-- play-like dot row -->
+        <div class="play-like-row">
+          <div><img src="./Icons/play.png" alt="play button" class="play-like-button"></div>
+          <div> <img src="./Icons/heart.png" alt="play button"
+           class="play-like-button"></div>
+           <div>  <pre> ...</pre></div> 
+        </div>
 
-      <div class="content-area">
+        <!-- main-album-song-list -->
+        <div class="song-list">
+          <div class="song-detail">
+            <div class="poster-name">
+                  <h5>1</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  <span id="dot">..</span> </p>
+            </div>
+          </div>
 
-    </div>
+          <!-- 2 -->
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>2</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+          <!-- 3 -->
+
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>3</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+          <!-- 4 -->
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>4</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+          <!-- 5 -->
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>5</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+          <!-- 6 -->
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>6</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+          <!-- 7 -->
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>7</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+
+          <!-- 8 -->
+
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>8</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+           <!-- 9 -->
+
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>8</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+
+           <!-- 10 -->
+
+          <div class="song-detail">
+            <div class="poster-name">
+                <h5>8</h5>
+                <img src="./Icons/list img.png" alt="song poster">
+                <div class="singer-name">
+                  <h5>We are good</h5>
+                  <h6>Dua lipa</h6>
+                </div>
+            </div>
+            <div class="album-name">
+              <p>web development</p>
+            </div>
+            <div class="date-added">
+               <p>11-7-2023</p>
+            </div>
+            <div class="duration">
+              <p>2:44  .. </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
 
     <!-- --------------------------- -->
     <!-- bottom-music player -->
