linking other html with index.html

--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
           <div class="playlist-area">
             <div class="playlist">
               <img src="./Icons/imgs/Purple-big.png" alt="liked songs" />
-              <p>Liked Songs</p>
+              <a href="./album.html"><p>Liked Songs</p></a>
             </div>
 
             <div class="playlist">
               <img src="./Icons/imgs/man.png" alt="playlist-1" />
-              <p>Playlist-1</p>
+              <a href="./album.html"><p>Playlist-1</p></a>
             </div>
 
             <div class="playlist">
               <img src="./Icons/imgs/KDA.png" alt="playlist-2" />
-              <p>Playlist-2</p>
+              <a href="./album.html"><p>Playlist-2</p></a>
             </div>
 
             <div class="playlist">
               <img src="./Icons/imgs/marshmellow.png" alt="playlist-3" />
-              <p>Playlist-3</p>
+              <a href="./album.html"> <p>Playlist-3</p></a>
             </div>
           </div>
 
